// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Metadata|Shared Shared 1 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-simple-token-component
      ng-reflect-name="Prop Name"
    >
      <h3>
        Prop Name
      </h3>
      <p>
        Items:
      </p>
      <ul>
        
        <li>
          Joe
        </li>
        <li>
          Jane
        </li>
      </ul>
    </storybook-simple-token-component>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Metadata|Shared Shared 2 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-simple-token-component>
      <h3>
        Provider Name
      </h3>
      <p>
        Items:
      </p>
      <ul>
        
        <li>
          Joe
        </li>
        <li>
          Jane
        </li>
      </ul>
    </storybook-simple-token-component>
  </ng-component>
</storybook-dynamic-app-root>
`;
